force-app/main/default/objects/ssot__AssetSalesAction__dlm/fields/ssot__ActionDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActionDateTime__c</fullName>
    <label>Action Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActionDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>