force-app/main/default/objects/ssot__AssetSalesAction__dlm/fields/ssot__AssetActionCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssetActionCategory__c</fullName>
    <label>Asset Action Category</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssetActionCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>