force-app/main/default/objects/ssot__AssetSalesAction__dlm/fields/ssot__AssetActionType__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssetActionType__c</fullName>
    <label>Asset Action Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssetActionType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>