force-app/main/default/objects/ssot__AssetSalesAction__dlm/fields/ssot__AssetChangeQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssetChangeQuantity__c</fullName>
    <label>Asset Change Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssetChangeQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>