force-app/main/default/objects/ssot__AssetSalesAction__dlm/fields/ssot__MonthlyRecurringRevenueChangeAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__MonthlyRecurringRevenueChangeAmount__c</fullName>
    <label>Monthly Recurring Revenue Change Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MonthlyRecurringRevenueChangeAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>