force-app/main/default/objects/ssot__AssetSalesAction__dlm/fields/ssot__rel_1711688034018_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1711688034018_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssetSalesAction_AssetId_map_Asset_I_rel</label>
    <referenceTo>ssot__Asset__dlm</referenceTo>
    <relationshipLabel>AssetSalesAction_AssetId_map_Asset_I_rel</relationshipLabel>
    <relationshipName>rel_1711688034018_end</relationshipName>
    <type>Lookup</type>
</CustomField>